--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 
         <!-- Bootstrap JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>Editz</title>
     </head>
     <body>
+        <center>
         <h1>Editz</h1>
+        <h3>By Dylan and Alex</h3>
+        
+        </center>
     </body>
 </html>
