--- a/index.html
+++ b/index.html
@@ -17,9 +17,18 @@
     </head>
     <body>
         <center>
-        <h1>Editz</h1>
-        <h3>By Dylan and Alex</h3>
-        
+        <div class="container">
+            <div class="jumbotron">
+                <h1>Editz</h1>
+                <h3>By Dylan and Alex</h3>
+            </div>
+        <hr>
+            <div class="content">
+            <h3>Some examples</h3>
+            <img src="">
+            </div>
         </center>
+            
+        </div>
     </body>
 </html>
