--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
     <body>
         <center>
         <div class="container">
-            <div class="jumbotron">
+            <table>
+                <th>Home</th>
+                <th>Order an Edit<th>
+                <th>Contact Us<th>
+            </table>
                 <h1>Editz</h1>
                 <h3>By Dylan and Alex</h3>
-            </div>
+           
         <hr>
             <div class="content">
             <h3>Some examples</h3>
