--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
     <body>
         <center>
         <div class="container">
-            <table>
-                <th>Home</th>
-                <th>Order an Edit<th>
-                <th>Contact Us<th>
-            </table>
+            <div class="topnav">
+                <a class="active" href="index.html">Home</a>
+                <a href="order.html">Order an Edit</a>
+                <a href="contact.html">Contact Us</a>
+  
+            </div>
                 <h1>Editz</h1>
                 <h3>By Dylan and Alex</h3>
            
