--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
                 <a href="contact.html">Contact Us</a>
   
             </div>
-                <h1>Editz</h1>
+                <h1>GWEditz</h1>
                 <h3>By Dylan and Alex</h3>
-           
         <hr>
             <div class="content">
             <h3>Some examples</h3>
