--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Bootstrap JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <title>Editz</title>
+        <title>GWeditz</title>
     </head>
     <body>
         <center>
@@ -24,7 +24,7 @@
                 <a href="contact.html">Contact Us</a>
   
             </div>
-                <h1>GWEditz</h1>
+                <h1>GWeditz</h1>
                 <h3>By Dylan and Alex</h3>
         <hr>
             <div class="content">
