--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <body>
         <center>
         <div class="container">
-            <div class="topnav">
-                <a class="active" href="index.html">Home</a>
-                <a href="order.html">Order an Edit</a>
-                <a href="contact.html">Contact Us</a>
+            <ul class="topnav">
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="order.html">Order an Edit</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
   
-            </div>
+            </u.>
                 <h1>GWeditz</h1>
                 <h3>By Dylan and Alex</h3>
         <hr>
