--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,17 @@
         <link rel="stylesheet" type="text/css" href="my_style.css">
     </head>
     <body>
-        <!-- Your HTML code here -->
+        <center>
+        <div class="container">
+            <ul class="topnav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="order.html">Order an Edit</a></li>
+                <li><a class="active" href="contact.html">Contact Us</a></li>
+  
+            </ul>
+            </div>
+        </center>
+            
+        
     </body>
 </html>
