--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
             <h3>Some examples</h3>
             <img src="C891557B-3F34-4CC9-85DB-7B17B91CCCFA_1_201_a.jpeg">
                 <p>By Alex</p>
+            <img src="IMG_2351.JPG">
+                <p>by Dylan</p>
             <img src="/47B87BBE-327A-4F8B-9DEB-783424F4BA89_1_102_o.jpeg>
                 <p>by Alex</p>
+            
             </div>
         </center>
             
