--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p>By Alex</p>
             <img src="IMG_2351.JPG">
                 <p>by Dylan</p>
-            <img src="/47B87BBE-327A-4F8B-9DEB-783424F4BA89_1_102_o.jpeg>
+            <img src="47B87BBE-327A-4F8B-9DEB-783424F4BA89_1_102_o.jpeg>
                 <p>by Alex</p>
             
             </div>
