--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <center>
         <div class="container">
             <ul class="topnav">
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="order.html">Order an Edit</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a class="active" href="index.html">Home</a>
+                <a href="order.html">Order an Edit</a>
+                <a href="contact.html">Contact Us</a></li>
   
             </ul>
                 <h1>GWeditz</h1>
