--- a/order.html
+++ b/order.html
@@ -17,9 +17,9 @@
     <body>
         <div class="container">
             <ul class="topnav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="order.html" class="active" >Order an Edit</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="index.html">Home</a>
+                <a href="order.html" class="active" >Order an Edit</a>
+                <a href="contact.html">Contact Us</a></li>
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSehvoF48NN3QXmNZy2QSYajzd5QMSUkqZEtBUp3usTkOddK7w/viewform?embedded=true" width="640" height="457" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </ul>
             </div>
