--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,9 @@
         <center>
         <div class="container">
             <ul class="topnav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="order.html">Order an Edit</a></li>
-                <li><a class="active" href="contact.html">Contact Us</a></li>
+                <li><a href="index.html">Home</a>
+                <a href="order.html">Order an Edit</a>
+                <a class="active" href="contact.html">Contact Us</a></li>
                 
             </ul>
             <h3>Alex Gervais</h3>
