--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <hr>
             <div class="content">
             <h3>Some examples</h3>
-            <img src="C891557B-3F34-4CC9-85DB-7B17B91CCCFA_1_201_a.jpeg">
+            <img src="C891557B-3F34-4CC9-85DB-7B17B91CCCFA_1_201_a.jpeg" alt="trae">
                 <p>By Alex</p>
-            <img src="IMG_2351.JPG">
+            <img src="IMG_2351.JPG" alt="Joey">
                 <p>by Dylan</p>
-            <img src="47B87BBE-327A-4F8B-9DEB-783424F4BA89_1_102_o.jpeg">
+            <img src="47B87BBE-327A-4F8B-9DEB-783424F4BA89_1_102_o.jpeg" alt="0">
                 <p>by Alex</p>
             
             </div>
