--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <body>
         <center>
         <div class="container">
+            <img src="GWeditz Logo.png">
             <ul class="topnav">
                 <li><a class="active" href="index.html">Home</a>
                 <a href="order.html">Order an Edit</a>
