--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
     <body>
         <center>
         <div class="container">
-            <ul class="topnav">
-                <li><a class="active" href="index.html">Home</a>
+                <h2 class="navbar><a class="active" href="index.html">Home</a>
                 <a href="order.html">Order an Edit</a>
-                <a href="contact.html">Contact Us</a></li>
-  
-            </ul>
+                <a href="contact.html">Contact Us</a></h2>
                 <h1>GWeditz</h1>
                 <h3>By Dylan and Alex</h3>
         <hr>
