--- a/contact.html
+++ b/contact.html
@@ -17,12 +17,11 @@
     <body>
         <center>
         <div class="container">
-            <ul class="topnav">
-                <li><a href="index.html">Home</a>
-                <a href="order.html">Order an Edit</a>
-                <a class="active" href="contact.html">Contact Us</a></li>
-                
-            </ul>
+            <h2 class="navbar">
+                <a hred="index.html">Home</a>
+                <a href="Order.html">Order an Edit</a>
+                <a href="contact.html" class="active">Contact Us</a>
+            </h2>
             <h3>Alex Gervais</h3>
             <p>Email: alexgervais24@icloud.com</p>
             
