--- a/order.html
+++ b/order.html
@@ -16,12 +16,10 @@
     </head>
     <body>
         <div class="container">
-            <ul class="topnav">
-                <li><a href="index.html">Home</a>
-                <a href="order.html" class="active" >Order an Edit</a>
-                <a href="contact.html">Contact Us</a></li>
+            <h2 class="navbar><a class="active" href="index.html">Home</a>
+                <a href="order.html">Order an Edit</a>
+                <a href="contact.html">Contact Us</a></h2>
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSehvoF48NN3QXmNZy2QSYajzd5QMSUkqZEtBUp3usTkOddK7w/viewform?embedded=true" width="640" height="457" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-            </ul>
             </div>
     </body>
 </html>
