--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <center>
         <div class="container">
             <h2 class="navbar">
-                <a hred="index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="Order.html">Order an Edit</a>
                 <a href="contact.html" class="active">Contact Us</a>
             </h2>
