--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
     <body>
         <center>
         <div class="container">
-                <h2 class="navbar><a class="active" href="index.html">Home</a>
-                <a href="order.html">Order an Edit</a>
-                <a href="contact.html">Contact Us</a></h2>
-                <h1>GWeditz</h1>
-                <h3>By Dylan and Alex</h3>
+                <div class="topnav">
+                <a class="active" href="#home">Home</a>
+                <a href="#news">News</a>
+                <a href="#contact">Contact</a>
+                <a href="#about">About</a>
+                </div>
         <hr>
             <div class="content">
             <h3>Some examples</h3>
