--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,12 @@
     <body>
         <center>
         <div class="container">
-            <h2 class="navbar">
-                <a href="index.html">Home</a>
-                <a href="Order.html">Order an Edit</a>
-                <a href="contact.html" class="active">Contact Us</a>
-            </h2>
+            <div class="topnav">
+                <a class="active" href="#home">Home</a>
+                <a href="#news">News</a>
+                <a href="#contact">Contact</a>
+                <a href="#about">About</a>
+                </div>
             <h3>Alex Gervais</h3>
             <p>Email: alexgervais24@icloud.com</p>
             
