--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <center>
         <div class="container">
                 <div class="topnav">
-                <a class="active" href="#home">Home</a>
-                <a href="#news">News</a>
-                <a href="#contact">Contact</a>
-                <a href="#about">About</a>
+                <a class="active" href="index.html">Home</a>
+                <a href="order.html">News</a>
+                <a href="contact.html">Contact</a>
+                
                 </div>
         <hr>
             <div class="content">
