--- a/order.html
+++ b/order.html
@@ -17,10 +17,10 @@
     <body>
         <div class="container">
             <div class="topnav">
-                <a class="active" href="#home">Home</a>
-                <a href="#news">News</a>
-                <a href="#contact">Contact</a>
-                <a href="#about">About</a>
+                <a href="index.html">Home</a>
+                <a href="order.html" class="active">News</a>
+                <a href="contact.html">Contact</a>
+                
                 </div>
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSehvoF48NN3QXmNZy2QSYajzd5QMSUkqZEtBUp3usTkOddK7w/viewform?embedded=true" width="640" height="457" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
