--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
         <center>
         <div class="container">
             <div class="topnav">
-                <a class="active" href="#home">Home</a>
-                <a href="#news">News</a>
-                <a href="#contact">Contact</a>
-                <a href="#about">About</a>
+                <a href="index.html">Home</a>
+                <a href="order.html">News</a>
+                <a href="contact.html" class="active">Contact</a>
+                
                 </div>
             <h3>Alex Gervais</h3>
             <p>Email: alexgervais24@icloud.com</p>
