--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <h3>Some examples</h3>
             <img src="C891557B-3F34-4CC9-85DB-7B17B91CCCFA_1_201_a.jpeg" alt="trae">
             <img src="IMG_2351.JPG" alt="Joey">
-            <img src="47B87BBE-327A-4F8B-9DEB-783424F4BA89_1_102_o.jpeg" alt="0">           
+            <img src="47B87BBE-327A-4F8B-9DEB-783424F4BA89_1_102_o.jpeg" alt="0">
+            <img src="Screenshot 2020-01-29 at 8.49.37 PM - Edited.png" alt="bronny">
             </div>
         </center>
             
