--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
         <hr>
             <div class="content">
-            <h3>Some examples</h3>
+            <h3>Some examples of our work</h3>
             <img src="C891557B-3F34-4CC9-85DB-7B17B91CCCFA_1_201_a.jpeg" alt="trae">
             <img src="IMG_2351.JPG" alt="Joey">
             <img src="47B87BBE-327A-4F8B-9DEB-783424F4BA89_1_102_o.jpeg" alt="0">
