--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
                 <div class="topnav">
                 <a class="active" href="index.html">Home</a>
-                <a href="order.html">News</a>
+                <a href="order.html">Order an edit</a>
                 <a href="contact.html">Contact</a>
                 
                 </div>
