--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="topnav">
                 <a href="index.html">Home</a>
-                <a href="order.html">News</a>
+                <a href="order.html">Order an edit</a>
                 <a href="contact.html" class="active">Contact</a>
                 
                 </div>
