--- a/order.html
+++ b/order.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="topnav">
                 <a href="index.html">Home</a>
-                <a href="order.html" class="active">News</a>
+                <a href="order.html" class="active">Order an edit</a>
                 <a href="contact.html">Contact</a>
                 
                 </div>
