--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
         <hr>
             <div class="content">
             <h3>Some examples of our work</h3>
-            <img src="C891557B-3F34-4CC9-85DB-7B17B91CCCFA_1_201_a.jpeg" alt="trae">
-            <img src="IMG_2351.JPG" alt="Joey">
-            <img src="47B87BBE-327A-4F8B-9DEB-783424F4BA89_1_102_o.jpeg" alt="0">
-            <img src="Screenshot 2020-01-29 at 8.49.37 PM - Edited.png" alt="bronny">
+            <img src="C891557B-3F34-4CC9-85DB-7B17B91CCCFA_1_201_a.jpeg" alt="trae" class="example">
+                <br>
+            <img src="IMG_2351.JPG" alt="Joey" class="example">
+                <br>
+            <img src="47B87BBE-327A-4F8B-9DEB-783424F4BA89_1_102_o.jpeg" alt="0" class="example">
+                <br>
+            <img src="Screenshot 2020-01-29 at 8.49.37 PM - Edited.png" alt="bronny" class="example">
             </div>
         </center>
             
