--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <hr>
             <div class="content">
             <h3>Some examples of our work</h3>
+            <img src="ED72B4F3-CD60-4366-9943-9CFEC58290DD.jpg" alt="obj" class="example2">
             <img src="C891557B-3F34-4CC9-85DB-7B17B91CCCFA_1_201_a.jpeg" alt="trae" class="example1">
                 
             <img src="IMG_2351.JPG" alt="Joey" class="example2">
