--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="Screenshot 2020-01-29 at 8.49.37 PM - Edited.png" alt="bronny" class="example2">
                 
             <img src="Screenshot 2020-02-04 at 2.13.21 PM - Edited.png" class="example1" alt="Nipsey & Kobe">
-            <img src="" class="example2">
+            <img src="Screenshot 2020-02-04 at 5.45.16 PM.png" class="example2" alt="Juice">
             </div>
         </center>
             
