--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="content">
             <h3>Some examples of our work</h3>
             <img src="ED72B4F3-CD60-4366-9943-9CFEC58290DD.jpg" alt="obj" class="example2">
-            <img src="C891557B-3F34-4CC9-85DB-7B17B91CCCFA_1_201_a.jpeg" alt="trae" class="example1">
+            <img src="Screenshot 2020-02-04 at 5.45.16 PM.png" class="example1" alt="Juice">
                 
             <img src="IMG_2351.JPG" alt="Joey" class="example2">
                 
