--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             <p>Email: alexgervais24@icloud.com</p>
             
             <h3>Dylan Walsh</h3>
-            <p>Email:</p>
+            <p>Email: gweditz@gmail.com</p>
         </div>
         </center>
             
